[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/HUD/DateCounter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/HUD/BurnRate.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HUD/Header.gd" type="Script" id=3]
[ext_resource path="res://Scenes/HUD/PhaseHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD/Money.tscn" type="PackedScene" id=5]
[ext_resource path="res://Themes/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://Scenes/HUD/Money.gd" type="Script" id=7]

[node name="Header" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="MoneySystem" type="Node" parent="."]
script = ExtResource( 7 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_bottom = 80.0
theme = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 640.0
margin_bottom = 80.0
custom_constants/margin_left = 5

[node name="HudRight" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_right = 640.0
margin_bottom = 80.0
mouse_filter = 2
alignment = 2

[node name="PhaseHUD" parent="PanelContainer/MarginContainer/HudRight" instance=ExtResource( 4 )]
margin_left = 327.0
margin_right = 567.0
margin_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="EmptySpace" type="CenterContainer" parent="PanelContainer/MarginContainer/HudRight"]
margin_left = 571.0
margin_right = 635.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 0 )

[node name="HudLeft" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_right = 640.0
margin_bottom = 80.0
mouse_filter = 2
custom_constants/separation = 8

[node name="DateCounter" parent="PanelContainer/MarginContainer/HudLeft" instance=ExtResource( 1 )]

[node name="Money" parent="PanelContainer/MarginContainer/HudLeft" instance=ExtResource( 5 )]
margin_left = 108.0
margin_right = 208.0
rect_min_size = Vector2( 100, 80 )

[node name="BurnRate" parent="PanelContainer/MarginContainer/HudLeft" instance=ExtResource( 2 )]
margin_left = 216.0
margin_right = 316.0
rect_min_size = Vector2( 100, 80 )
